# gvariant

./: Makefile.am  autogen.sh  configure.ac
docs/reference/: .gitignore
docs/reference/glib/: Makefile.am  gvariant-docs.xml  gvariant-overrides.txt  gvariant-sections.txt
glib/: Makefile.am  gexpensive.h  gsignature-iterate.h  gsignature.c  gsignature.h  gsvariant.c  gsvariant.h  gsvhelper.c  gsvhelper.h  gvariant-core.c  gvariant-loadstore.h  gvariant-markup.c  gvariant-private.h  gvariant-serialiser.c  gvariant-serialiser.h  gvariant-util.c  gvariant-valist.c  gvariant.h  gvariant.pc.in  gvarianttype.c  gvarianttype.h  gvarianttypeinfo.c  gvarianttypeinfo.h
glib/gvariant-tests/: .gitignore  Makefile.am  gtester.mk  gvariant-basic.c  gvariant-complex.c  gvariant-constructors.c  gvariant-endian.c  gvariant-markup.c  gvariant-random.c  gvariant-serialiser.c
glib/tests/: .gitignore  Makefile.am  gvariant-basic.c  gvariant-big.c  gvariant-complex.c  gvariant-endian.c  gvariant-markup.c  gvariant-objpath.c  gvariant-random.c  gvariant-serialiser.c  gvariant-signature.c  gvariant-varargs.c  varargs.c
tools/: .gitignore  Makefile.am  gvariant-cat.c  gvariant-serialise.c
